# QuoteFlickTelegramBot

./: .env.example  README.md  pyproject.toml
app/: config.py  loader.py  main.py
app/handler/: user_handler.py
app/services/: api.py
