[tool.poetry]
name = "quoteflicktelegrambot"
version = "0.1.0"
description = ""
authors = ["Соколов Ярослав <yari.sokolov.2004@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.17.0"
requests = "^2.32.3"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
